samples/_failures_safe/1761488376_f9e5dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f78a863.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
